--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "minimal-ember",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for app-template goes here",
-  "repository": "",
+  "description": "Testbed for a minimal ember app with glint",
+  "repository": "https://github.com/ef4/minimal-ember",
   "license": "MIT",
-  "author": "",
+  "author": "Edward Faulkner <edward@eaf4.com>",
   "type": "module",
   "imports": {
     "#/*": "./src/*",
@@ -32,17 +32,22 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-transform-runtime": "^7.25.4",
+    "@babel/plugin-transform-typescript": "^7.26.8",
     "@babel/runtime": "^7.25.6",
-    "@ember/optional-features": "^2.0.0",
     "@ember/test-helpers": "^5.0.0",
     "@embroider/core": "^4.0.0-alpha.6",
-    "@embroider/macros": "^1.17.0-alpha.5",
     "@embroider/router": "^3.0.0-alpha.1",
     "@embroider/vite": "^1.0.0-alpha.7 ",
     "@glimmer/component": "^2.0.0",
     "@glimmer/tracking": "^1.1.2",
+    "@glint/core": "1.4.1-unstable.a8cefd1",
+    "@glint/environment-ember-template-imports": "1.4.1-unstable.a8cefd1",
+    "@glint/template": "1.4.1-unstable.a8cefd1",
     "@rollup/plugin-babel": "^5.3.1",
+    "@tsconfig/ember": "^3.0.0",
+    "@types/qunit": "^2.19.12",
     "babel-plugin-ember-template-compilation": "^2.3.0",
+    "concurrently": "^9.1.2",
     "decorator-transforms": "^2.0.0",
     "ember-cli": "^6.2.2",
     "ember-modifier": "^4.1.0",
@@ -50,30 +55,11 @@
     "ember-qunit": "^9.0.1",
     "ember-resolver": "^13.1.0",
     "ember-source": "6.3.0-alpha.4",
-    "qunit": "^2.19.4",
-    "qunit-dom": "^3.4.0",
-    "vite": "^5.0.9"
-  },
-  "engines": {
-    "node": ">= 18"
-  },
-  "ember": {
-    "edition": "octane"
-  },
-  "ember-addon": {
-    "type": "app",
-    "version": 2
-  },
-  "dependencies": {
-    "@babel/plugin-transform-typescript": "^7.26.8",
-    "@glint/core": "1.4.1-unstable.a8cefd1",
-    "@glint/environment-ember-template-imports": "1.4.1-unstable.a8cefd1",
-    "@glint/template": "1.4.1-unstable.a8cefd1",
-    "@tsconfig/ember": "^3.0.0",
-    "@types/qunit": "^2.19.12",
-    "concurrently": "^9.1.2",
-    "prettier": "^3.5.3",
     "prettier-plugin-ember-template-tag": "^2.0.4",
-    "typescript": "^5.8.2"
+    "prettier": "^3.5.3",
+    "qunit-dom": "^3.4.0",
+    "qunit": "^2.19.4",
+    "typescript": "^5.8.2",
+    "vite": "^5.0.9"
   }
 }
